Fix weather location not aligning to the right

--- a/data/css/newtab.css
+++ b/data/css/newtab.css
@@ -113,6 +113,10 @@ html {
     font-weight: 500;
 }
 #weather_location {
+    display: block;
+    position: relative;
+    top: 0.25em;
+    text-align: right;
     font-size: 0.8125em;
     font-weight: 500;
 }
